# microgradr

./: Cargo.toml  LICENSE  README.md
src/: engine.rs  graphviz.rs  main.rs  nb1.rs  nb2.rs  nb3.rs  nb4.rs  nn.rs  numr.rs  plot.rs  utils.rs
